# PyNdef

./: README.md  ndef.py  pyproject.toml  tests.py
.github/workflows/: python_compatibility_test.yml  python_coverage_test.yml  python_test.yml  test.yml
src/pyndef/: ndef.py
