[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyndef"
version = "1.0.0"
requires-python = ">=3.6"
authors = [
    { name = "XFY9326" }
]
maintainers = [
    { name = "XFY9326" }
]
description = "Pure Python library for creating and parsing NDEF messages."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["nfc", "ndef", "ndef-library"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/XFY9326/PyNdef"
Repository = "https://github.com/XFY9326/PyNdef.git"
"Bug Tracker" = "https://github.com/XFY9326/PyNdef/issues"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [".github/"]

[tool.hatch.version]
path = "src/pyndef/__about__.py"
